--- a/contacto.html
+++ b/contacto.html
@@ -17,6 +17,21 @@
             <input class="button_grey" id="modoOscuro" type="button" value="Modo oscuro" onclick="cambiarColorOscuro()">
         </div>
 
+
+        <form id="formulario">
+            <input type="text">
+            <input type="text">
+            <input type="number">
+            <input type="email">
+            <input type="submit" value="Enviar" class="button_grey" >
+        </form>
+
+        <div>
+            <h4 id="nombre"></h4>
+            <h4 id="apellido"></h4>
+            <h4 id="edad"></h4>
+            <h4 id="email"></h4>
+        </div>
     </main>
 
     <footer>
