--- a/contacto.html
+++ b/contacto.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-entrega 3</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header id="header">
     </header>
 
-    <main id="mainIndex">
-        <h1 id="titulo"> !!Todo lo que necesites para tus eventos, fiestas y reuniones!!!</h1>
-        <h2 id="contactanos"> !!Contacta con nosotros para que no te falte nada!!!</h2>
+    <main id="mainContacto">
+        <h1 id="titulo"> InfoCafé - Todo lo que necesitas saber</h1>
+        <h2 id="contactanos"> !!Contacta con nosotros!!</h2>
 
         <div class="botonera">
-            <input class="button_grey" id="modoClaro" type="button" value="Modo claro"  onclick="cambiarColorClaro()">
-            <input class="button_grey" id="modoOscuro" type="button" value="Modo oscuro" onclick="cambiarColorOscuro()">
+            <button id="toggle-button">Cambiar a Modo Oscuro</button>
         </div>
 
         <form id="formulario">
@@ -46,12 +48,16 @@
     </main>
     
     
-    <footer>
-        <p> Comision #59950 | Proyecto JavaScript 2024</p>
+    <footer id="footer">
+
     </footer>
 
 
 <!--Scripts -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="js/navegacion.js"></script>
+<script src="js/darkmode.js"></script>
+<script src="js/footer.js"></script>
 <script src="js/functions.js"></script>
 
     <script src="js/index.js"></script>
