--- a/index.html
+++ b/index.html
@@ -3,45 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pre-entrega 3</title>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/style.css">
+    <title>ProyectoFinal2024</title>
 </head>
 <body>
     <header id="header">
     </header>
 
     <main id="mainIndex">
-        <h1 id="titulo"> Todo lo que necesites para tus eventos, fiestas y reuniones!!</h1>
+        <h1 id="titulo"> InfoCafé - Todo lo que necesitas saber</h1>
 
         <div class="botonera">
-            <input class="button_grey" id="modoClaro" type="button" value="Modo claro"  onclick="cambiarColorClaro()">
-            <input class="button_grey" id="modoOscuro" type="button" value="Modo oscuro" onclick="cambiarColorOscuro()">
+            <button id="toggle-button">Cambiar a Modo Oscuro</button>
         </div>
 
+        <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner" id="carouselItems">
+                <!-- Los items del carrusel se insertarán aquí -->
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
 
-    <footer>
-        <p> Comision #59950 | Proyecto JavaScript 2024</p>
+    <footer id="footer">
     </footer>
 
-
-<!--Scripts -->
-<script src="js/functions.js"></script>
-
+    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="js/navegacion.js"></script>
+    <script src="js/darkmode.js"></script>
+    <script src="js/fetchcafe.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/footer.js"></script>
     <script src="js/index.js"></script>
-
     <script src="js/storage.js"></script>
-
-    <script>
-
-        function cambiarColorOscuro() {
-            document.body.style.backgroundColor = 'black';
-            document.getElementById('titulo').style.color = 'white';
-        }
-
-        function cambiarColorClaro() {
-            document.body.style.backgroundColor = 'white';
-            document.getElementById('titulo').style.color = 'black';
-        }
-    </script>
 </body>
 </html>
