--- a/contacto.html
+++ b/contacto.html
@@ -12,7 +12,7 @@
     <header id="header">
     </header>
 
-    <main id="mainContacto">
+    <main id="mainContacto" class="main-content">
         <h1 id="titulo"> InfoCafé - Todo lo que necesitas saber</h1>
         <h2 id="contactanos"> !!Contacta con nosotros!!</h2>
 
