--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="header">
     </header>
 
-    <main id="mainIndex">
+    <main id="mainIndex" class="main-content">
         <h1 id="titulo"> InfoCafé - Todo lo que necesitas saber</h1>
 
         <div class="botonera">
@@ -21,7 +21,7 @@
 
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner" id="carouselItems">
-                <!-- Los items del carrusel se insertarán aquí -->
+                
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
