--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
 
     <main id="mainIndex" class="main-content">
-        <h1 id="titulo"> InfoCafé - Todo lo que necesitas saber</h1>
+        <h1 id="titulo" class="titulo-cafe"> InfoCafé - Todo lo que necesitas saber</h1>
 
         <div class="botonera">
             <button id="toggle-button">Cambiar a Modo Oscuro</button>
@@ -34,6 +34,8 @@
         </div>
     </main>
 
+    
+
     <footer id="footer">
     </footer>
 
@@ -42,9 +44,6 @@
     <script src="js/navegacion.js"></script>
     <script src="js/darkmode.js"></script>
     <script src="js/fetchcafe.js"></script>
-    <script src="js/functions.js"></script>
     <script src="js/footer.js"></script>
-    <script src="js/index.js"></script>
-    <script src="js/storage.js"></script>
 </body>
 </html>
