--- a/carrito.html
+++ b/carrito.html
@@ -12,7 +12,7 @@
     <header id="header"></header>
 
     <main id="maincarrito" class="main-content">
-        <h1 id="titulo">Tu carrito de café</h1>
+        <h1 id="titulo" class="titulo-cafe">Tu carrito de café</h1>
 
         <div id="cart-content">
             <button id="clear-cart" class="btn btn-primary">Vaciar Carrito</button>
